--- a/arunesh_newcv25.tex
+++ b/arunesh_newcv25.tex
@@ -1,5 +1,5 @@
 
-\documentclass[letterpaper,11pt]{article}
+\documentclass[letterhead,11pt]{article}
 
 \usepackage{latexsym}
 \usepackage[empty]{fullpage}
@@ -25,7 +25,9 @@
 % serif
 % \usepackage{CormorantGaramond}
 % \usepackage{charter}
+\newdimen\resumewidth
 
+\resumewidth=6.5in
 
 \pagestyle{fancy}
 \fancyhf{} % clear all header and footer fields
@@ -92,6 +94,22 @@
 \newcommand{\resumeSubHeadingListEnd}{\end{itemize}}
 \newcommand{\resumeItemListStart}{\begin{itemize}}
 \newcommand{\resumeItemListEnd}{\end{itemize}\vspace{-5pt}}
+\newcommand{\lineunder}{\vspace*{-8pt} \\ \hspace*{-18pt} \rule{\mylinewidth}{0.5pt} \\}
+
+\newdimen\mylinewidth 
+\setlength{\mylinewidth}{\resumewidth}
+\addtolength{\mylinewidth}{-0.4in}
+\newcommand{\contact}[3]{
+\vspace*{-8pt}
+\begin{center}
+{\LARGE \scshape {#1}}
+\lineunder
+#2\\
+#3
+\end{center}
+\vspace*{-8pt}
+}
+
 
 %-------------------------------------------
 %%%%%%  RESUME STARTS HERE  %%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -106,13 +124,13 @@
 % \end{tabular*}
 
 \begin{center}
-    \textbf{\Huge \scshape Arunesh Mishra} \\ \vspace{1pt}
+    {\LARGE \scshape Arunesh \hspace{3mm} Mishra} \\ \vspace{1pt}
+    %\textbf{\Huge \scshape Arunesh Mishra} \\ \vspace{1pt}
     \small 650-732-7700 $|$ \href{mailto:aruneshm@gmail.com}{\underline{aruneshm@gmail.com}} $|$ 
     \href{https://linkedin.com/in/...}{\underline{linkedin.com/in/aruneshm}} $|$
-    \href{https://github.com/...}{\underline{github.com/arunesh}}
+    %\href{https://github.com/...}{\underline{github.com/arunesh}}
     \href{https://arunesh.github.io}{\underline{arunesh.github.io}}
 \end{center}
-
 
 
 
@@ -121,8 +139,8 @@
   \resumeSubHeadingListStart
 
     \resumeSubheading
-      {Undergraduate Research Assistant}{June 2020 -- Present}
-      {Texas A\&M University}{College Station, TX}
+      {Co-founder and Principal Engineer}{June 2019 -- Present}
+      {Picolo Labs}{Mountain View, CA}
       \resumeItemListStart
         \resumeItem{Developed a REST API using FastAPI and PostgreSQL to store data from learning management systems}
         \resumeItem{Developed a full-stack web application using Flask, React, PostgreSQL and Docker to analyze GitHub data}
@@ -140,8 +158,8 @@
 %-------------------------------------------
 
     \resumeSubheading
-      {Information Technology Support Specialist}{Sep. 2018 -- Present}
-      {Southwestern University}{Georgetown, TX}
+      {Co-founder and CTO}{2017 -- 2019}
+      {Incept AI}{San Mateo, CA}
       \resumeItemListStart
         \resumeItem{Communicate with managers to set up campus computers used on campus}
         \resumeItem{Assess and troubleshoot computer problems brought by students, faculty and staff}
