--- a/arunesh_newcv25.tex
+++ b/arunesh_newcv25.tex
@@ -1,5 +1,5 @@
 
-\documentclass[letterhead,11pt]{article}
+\documentclass[letterhead,10pt]{article}
 
 \usepackage{latexsym}
 \usepackage[empty]{fullpage}
@@ -126,15 +126,18 @@
 \begin{center}
     {\LARGE \scshape Arunesh \hspace{3mm} Mishra} \\ \vspace{1pt}
     %\textbf{\Huge \scshape Arunesh Mishra} \\ \vspace{1pt}
-    \small 650-732-7700 $|$ \href{mailto:aruneshm@gmail.com}{\underline{aruneshm@gmail.com}} $|$ 
+    %\small 650-732-7700 $|$ \href{mailto:aruneshm@gmail.com}{\underline{aruneshm@gmail.com}} $|$ 
+    \footnotesize{\href{mailto:aruneshm@gmail.com}{\underline{aruneshm@gmail.com}} $|$ 
     \href{https://linkedin.com/in/...}{\underline{linkedin.com/in/aruneshm}} $|$
     %\href{https://github.com/...}{\underline{github.com/arunesh}}
-    \href{https://arunesh.github.io}{\underline{arunesh.github.io}}
+    \href{https://arunesh.github.io}{\underline{arunesh.github.io}}}
 \end{center}
 
 
 
 %-----------EXPERIENCE-----------
+\section{Summary}
+Hands-on engineering leader with strong background in Systems, Algorithms and LLM-based agentic technologies. Looking for a leadership role in a challenging and high impact domain.
 \section{Experience}
   \resumeSubHeadingListStart
 
