--- a/arunesh_newcv25.tex
+++ b/arunesh_newcv25.tex
@@ -137,99 +137,111 @@
 
 %-----------EXPERIENCE-----------
 \section{Summary}
-Hands-on engineering leader with strong background in Systems, Algorithms and LLM-based agentic technologies. Looking for a leadership role in a challenging and high impact domain.
+Hands-on engineering leader with strong background in Agentic AI, Algorithms and Distributed Systems. Looking for a leadership role in a challenging and high impact domain.
 \section{Experience}
   \resumeSubHeadingListStart
 
     \resumeSubheading
-      {Co-founder and Principal Engineer}{June 2019 -- Present}
+      {Co-founder and CTO}{June 2019 -- Present}
       {Picolo Labs}{Mountain View, CA}
       \resumeItemListStart
-        \resumeItem{Developed a REST API using FastAPI and PostgreSQL to store data from learning management systems}
-        \resumeItem{Developed a full-stack web application using Flask, React, PostgreSQL and Docker to analyze GitHub data}
-        \resumeItem{Explored ways to visualize GitHub collaboration in a classroom setting}
+        \resumeItem{Talkbox Project: On-device privacy friendly AI. Includes US Coast Guard, state and other federal agencies as customers.}
+        \resumeItem{Wave Project: Scalable end-end encrypted Virtual Reality and Video conferencing system.}
+        \resumeItem{Privacy friendly federated learning using Fully-Homomorphic encryption algorithms.}
+        \resumeItem{Raised seed round from Menlo Ventures, Village Global (Eric Schmidt)}
+        \resumeItem{Awarded Research grant by the National Science Foundation (NSF), matched by state government.}
       \resumeItemListEnd
       
-% -----------Multiple Positions Heading-----------
-%    \resumeSubSubheading
-%     {Software Engineer I}{Oct 2014 - Sep 2016}
-%     \resumeItemListStart
-%        \resumeItem{Apache Beam}
-%          {Apache Beam is a unified model for defining both batch and streaming data-parallel processing pipelines}
-%     \resumeItemListEnd
-%    \resumeSubHeadingListEnd
-%-------------------------------------------
-
     \resumeSubheading
       {Co-founder and CTO}{2017 -- 2019}
       {Incept AI}{San Mateo, CA}
       \resumeItemListStart
-        \resumeItem{Communicate with managers to set up campus computers used on campus}
-        \resumeItem{Assess and troubleshoot computer problems brought by students, faculty and staff}
-        \resumeItem{Maintain upkeep of computers, classroom equipment, and 200 printers across campus}
+        \resumeItem{Chat-based AI assistant on Android to automatically take actions on the user's behalf}
+        \resumeItem{Engineered a knowledge base for the AI assistant consisting of mobile app screens, action traces and user intents}
+        \resumeItem{Launched and grew the app to a total of 100K+ users}
     \resumeItemListEnd
 
     \resumeSubheading
-      {Artificial Intelligence Research Assistant}{May 2019 -- July 2019}
-      {Southwestern University}{Georgetown, TX}
+      {Tech Lead, Senior Software Engineer}{Jan 2013 -- Feb 2017}
+      {Google Inc}{Mountain View, CA}
       \resumeItemListStart
-        \resumeItem{Explored methods to generate video game dungeons based off of \emph{The Legend of Zelda}}
-        \resumeItem{Developed a game in Java to test the generated dungeons}
-        \resumeItem{Contributed 50K+ lines of code to an established codebase via Git}
-        \resumeItem{Conducted  a human subject study to determine which video game dungeon generation technique is enjoyable}
-        \resumeItem{Wrote an 8-page paper and gave multiple presentations on-campus}
-        \resumeItem{Presented virtually to the World Conference on Computational Intelligence}
+        \resumeItem{Launched a network stack for peer-peer gaming on iOS and Android via Google Play Games SDK. Designed and implemented the network stack that maintains performance under changing network conditions and NAT topologies. Worked with the CEO of VectorUnit for RipTide
+        demo at Google I/O to showcase the platform.}
+        \resumeItem{Launched an API called Google Nearby that can transmit small amount of data securely over near-ultrasound for mobile phones. This can
+        be used to authenticate people in same physical room and securely measure physical distance
+        between phones to under 1 inch accuracy. Responsible for the stack on iOS and Android.Google Nearby grew from inception to 500M daily users.}
+        \resumeItem{Formed a team under Marissa Mayer to build an Android app that can automatically determine if two people are in the same physical room.}
+      \resumeItemListEnd
+
+    \resumeSubheading
+      {Software Engineer, L4}{2008 -- 2013}
+      {Google Inc}{Mountain View, CA}
+      \resumeItemListStart
+        \resumeItem{Launcehd Wifi-based location services for 3+ Billion users on Android and Chrome from inception. Build Wifi-RF based location clustering algorithms, traffic prediction and business occupancy prediction algorithms.}
+        \resumeItem{Designed and implemented a distributed system to compute user location using Wifi and Cellular base stations. System self-learns from Android users with a GPS fix to push location to indoor-users using statistical and randomized signal propagation algorithms.}
+        \resumeItem{Built cellular remap detection and localization technology, which powers Google's Mobile Maps software (1B+ downloads, most popular app on mobile).}
+        \resumeItem{System is now used on Android, WinMo and Blackberry phones. Also works on browsers using HTML 5 Geolocation API, such as on Mozilla's Firefox and Chrome browser, also launched with Google's Toolbar for Microsoft's Internet Explorer.}
+        \resumeItem{Algorithms serves over 3 Billion location computations per day on Android and powers Google's mobile Ads business unit. The success of the Wifi project helped grow the team to 70 Engineers (from 3).}
       \resumeItemListEnd
 
   \resumeSubHeadingListEnd
 
-
-%-----------PROJECTS-----------
-\section{Projects}
-    \resumeSubHeadingListStart
-      \resumeProjectHeading
-          {\textbf{Gitlytics} $|$ \emph{Python, Flask, React, PostgreSQL, Docker}}{June 2020 -- Present}
-          \resumeItemListStart
-            \resumeItem{Developed a full-stack web application using with Flask serving a REST API with React as the frontend}
-            \resumeItem{Implemented GitHub OAuth to get data from user’s repositories}
-            \resumeItem{Visualized GitHub data to show collaboration}
-            \resumeItem{Used Celery and Redis for asynchronous tasks}
-          \resumeItemListEnd
-      \resumeProjectHeading
-          {\textbf{Simple Paintball} $|$ \emph{Spigot API, Java, Maven, TravisCI, Git}}{May 2018 -- May 2020}
-          \resumeItemListStart
-            \resumeItem{Developed a Minecraft server plugin to entertain kids during free time for a previous job}
-            \resumeItem{Published plugin to websites gaining 2K+ downloads and an average 4.5/5-star review}
-            \resumeItem{Implemented continuous delivery using TravisCI to build the plugin upon new a release}
-            \resumeItem{Collaborated with Minecraft server administrators to suggest features and get feedback about the plugin}
-          \resumeItemListEnd
-    \resumeSubHeadingListEnd
-
-
-
-%
-%-----------PROGRAMMING SKILLS-----------
-\section{Technical Skills}
- \begin{itemize}[leftmargin=0.15in, label={}]
-    \small{\item{
-     \textbf{Languages}{: Java, Python, C/C++, SQL (Postgres), JavaScript, HTML/CSS, R} \\
-     \textbf{Frameworks}{: React, Node.js, Flask, JUnit, WordPress, Material-UI, FastAPI} \\
-     \textbf{Developer Tools}{: Git, Docker, TravisCI, Google Cloud Platform, VS Code, Visual Studio, PyCharm, IntelliJ, Eclipse} \\
-     \textbf{Libraries}{: pandas, NumPy, Matplotlib}
-    }}
- \end{itemize}
-
+\section{Awards and Highlights}
+  \resumeSubHeadingListStart
+    \resumeItemListStart
+     \resumeItem {Experience in Machine Learning, Agentic LLM use, Fine-tuning methods, NLP/NLU applications, design of AI Assistants, On-device privacy and security centric AI, Network protocols, Systems security, Fully homomorphic encryption systems (FHE).
+     \resumeItem {Recipient of prestigious Google’s Founder award for innovation. Presidents Gold Medal at IIT.}
+     \resumeItem {52 awarded patents on algorithms, security, networking, machine learning and distributed systems. Best paper award at top ACM conferences.}\\
+     \resumeItem {0 to 1: Started 3 product teams at Google including p2p networking on Android/iOS, led them to a Billion+ daily users.
+     \resemeItem {Raised funding from Eric Schmidt (Google ex-CEO) for Picolo Labs. Awarded NSF Research Grant for startup innovation.}
 
 %-----------EDUCATION-----------
 \section{Education}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {Southwestern University}{Georgetown, TX}
-      {Bachelor of Arts in Computer Science, Minor in Business}{Aug. 2018 -- May 2021}
+      {University of Maryland}{College Park, MD}
+      {Ph.D. Systems Security, M.S. in Computer Security}{Advisor: Dr. William Arbaugh}
     \resumeSubheading
-      {Blinn College}{Bryan, TX}
-      {Associate's in Liberal Arts}{Aug. 2014 -- May 2018}
+      {B.Tech }{Indian Institute of Technology, Guwahati, Gold Medalist}
   \resumeSubHeadingListEnd
+
+%-----------PROJECTS-----------
+%\section{Projects}
+%    \resumeSubHeadingListStart
+%      \resumeProjectHeading
+%          {\textbf{Gitlytics} $|$ \emph{Python, Flask, React, PostgreSQL, Docker}}{June 2020 -- Present}
+%          \resumeItemListStart
+%            \resumeItem{Developed a full-stack web application using with Flask serving a REST API with React as the frontend}
+%            \resumeItem{Implemented GitHub OAuth to get data from user’s repositories}
+%            \resumeItem{Visualized GitHub data to show collaboration}
+%            \resumeItem{Used Celery and Redis for asynchronous tasks}
+%          \resumeItemListEnd
+%      \resumeProjectHeading
+%          {\textbf{Simple Paintball} $|$ \emph{Spigot API, Java, Maven, TravisCI, Git}}{May 2018 -- May 2020}
+%          \resumeItemListStart
+%            \resumeItem{Developed a Minecraft server plugin to entertain kids during free time for a previous job}
+%            \resumeItem{Published plugin to websites gaining 2K+ downloads and an average 4.5/5-star review}
+%            \resumeItem{Implemented continuous delivery using TravisCI to build the plugin upon new a release}
+%            \resumeItem{Collaborated with Minecraft server administrators to suggest features and get feedback about the plugin}
+%          \resumeItemListEnd
+%    \resumeSubHeadingListEnd
+%
+
+
+%
+%-----------PROGRAMMING SKILLS-----------
+%\section{Technical Skills}
+% \begin{itemize}[leftmargin=0.15in, label={}]
+%    \small{\item{
+%     \textbf{Languages}{: Java, Python, C/C++, SQL (Postgres), JavaScript, HTML/CSS, R} \\
+%     \textbf{Frameworks}{: React, Node.js, Flask, JUnit, WordPress, Material-UI, FastAPI} \\
+%     \textbf{Developer Tools}{: Git, Docker, TravisCI, Google Cloud Platform, VS Code, Visual Studio, PyCharm, IntelliJ, Eclipse} \\
+%     \textbf{Libraries}{: pandas, NumPy, Matplotlib}
+%    }}
+% \end{itemize}
+%
+
+%-----------EDUCATION-----------
 
 %-------------------------------------------
 \end{document}
