--- a/arunesh_newcv25.tex
+++ b/arunesh_newcv25.tex
@@ -1,5 +1,5 @@
 
-\documentclass[letterhead,10pt]{article}
+\documentclass[letterpaper,10pt]{article}
 
 \usepackage{latexsym}
 \usepackage[empty]{fullpage}
@@ -187,13 +187,15 @@ Hands-on engineering leader with strong background in Agentic AI, Algorithms and
   \resumeSubHeadingListEnd
 
 \section{Awards and Highlights}
-  \resumeSubHeadingListStart
+%  \resumeSubHeadingListStart
     \resumeItemListStart
-     \resumeItem {Experience in Machine Learning, Agentic LLM use, Fine-tuning methods, NLP/NLU applications, design of AI Assistants, On-device privacy and security centric AI, Network protocols, Systems security, Fully homomorphic encryption systems (FHE).
+     \resumeItem {Experience in Machine Learning, Agentic LLM use, Fine-tuning methods, NLP/NLU applications, design of AI Assistants, On-device privacy and security centric AI, Network protocols, Systems security, Fully homomorphic encryption systems (FHE).}
      \resumeItem {Recipient of prestigious Google’s Founder award for innovation. Presidents Gold Medal at IIT.}
-     \resumeItem {52 awarded patents on algorithms, security, networking, machine learning and distributed systems. Best paper award at top ACM conferences.}\\
-     \resumeItem {0 to 1: Started 3 product teams at Google including p2p networking on Android/iOS, led them to a Billion+ daily users.
-     \resemeItem {Raised funding from Eric Schmidt (Google ex-CEO) for Picolo Labs. Awarded NSF Research Grant for startup innovation.}
+     \resumeItem {52 awarded patents on algorithms, security, networking, machine learning and distributed systems. Best paper award at top ACM conferences.}
+     \resumeItem {From 0 to 1: Started 3 product teams at Google including p2p networking on Android/iOS, Google Play Games and led them to a Billion+ daily users.}
+     \resumeItem {Raised funding from Eric Schmidt (Google ex-CEO) for Picolo Labs. Awarded NSF Research Grant for startup innovation.}
+   \resumeItemListEnd
+%  \resumeSubHeadingListEnd
 
 %-----------EDUCATION-----------
 \section{Education}
@@ -202,46 +204,8 @@ Hands-on engineering leader with strong background in Agentic AI, Algorithms and
       {University of Maryland}{College Park, MD}
       {Ph.D. Systems Security, M.S. in Computer Security}{Advisor: Dr. William Arbaugh}
     \resumeSubheading
-      {B.Tech }{Indian Institute of Technology, Guwahati, Gold Medalist}
+      {Indian Institute of Technology}{Guwahati, India}
+      {Bachelor of Technology}{Awarded President's Gold Medal}
   \resumeSubHeadingListEnd
 
-%-----------PROJECTS-----------
-%\section{Projects}
-%    \resumeSubHeadingListStart
-%      \resumeProjectHeading
-%          {\textbf{Gitlytics} $|$ \emph{Python, Flask, React, PostgreSQL, Docker}}{June 2020 -- Present}
-%          \resumeItemListStart
-%            \resumeItem{Developed a full-stack web application using with Flask serving a REST API with React as the frontend}
-%            \resumeItem{Implemented GitHub OAuth to get data from user’s repositories}
-%            \resumeItem{Visualized GitHub data to show collaboration}
-%            \resumeItem{Used Celery and Redis for asynchronous tasks}
-%          \resumeItemListEnd
-%      \resumeProjectHeading
-%          {\textbf{Simple Paintball} $|$ \emph{Spigot API, Java, Maven, TravisCI, Git}}{May 2018 -- May 2020}
-%          \resumeItemListStart
-%            \resumeItem{Developed a Minecraft server plugin to entertain kids during free time for a previous job}
-%            \resumeItem{Published plugin to websites gaining 2K+ downloads and an average 4.5/5-star review}
-%            \resumeItem{Implemented continuous delivery using TravisCI to build the plugin upon new a release}
-%            \resumeItem{Collaborated with Minecraft server administrators to suggest features and get feedback about the plugin}
-%          \resumeItemListEnd
-%    \resumeSubHeadingListEnd
-%
-
-
-%
-%-----------PROGRAMMING SKILLS-----------
-%\section{Technical Skills}
-% \begin{itemize}[leftmargin=0.15in, label={}]
-%    \small{\item{
-%     \textbf{Languages}{: Java, Python, C/C++, SQL (Postgres), JavaScript, HTML/CSS, R} \\
-%     \textbf{Frameworks}{: React, Node.js, Flask, JUnit, WordPress, Material-UI, FastAPI} \\
-%     \textbf{Developer Tools}{: Git, Docker, TravisCI, Google Cloud Platform, VS Code, Visual Studio, PyCharm, IntelliJ, Eclipse} \\
-%     \textbf{Libraries}{: pandas, NumPy, Matplotlib}
-%    }}
-% \end{itemize}
-%
-
-%-----------EDUCATION-----------
-
-%-------------------------------------------
 \end{document}
