--- a/arunesh_onepage.tex
+++ b/arunesh_onepage.tex
@@ -166,10 +166,10 @@ Hands-on engineering leader and full-stack engineer looking for a leadership rol
     \resumeSubheadingOneLine
       {Co-founder, CTO, Picolo Labs}{2019 - Present}
       \resumeItemListStart
-        \resumeItem{Talkbox Project: On-device privacy friendly system for Tranformer model accleeration on Android and iOS. Deployed speech-to-text, translator, and text-to-speech models fine tuned for 37 foreign languages with 2500+ operators at US Coast Guard, US Army(xtech), state and federal teams. Additinal features include document translation, question/answer and knowledge retrieval fully offline and on-device. Built custom fine-tuning pipeline and achieved SoTA on accuracy. Some opensourced https://huggingface.co/arun100 }
+        \resumeItem{Talkbox Project: On-device privacy friendly system for Transformer model acceleration on Android and iOS. Deployed speech-to-text, translator, and text-to-speech models fine tuned for 37 foreign languages with 2500+ operators at US Coast Guard, US Army(xtech), state and federal teams. Additional features include document translation, question/answer and knowledge retrieval fully offline and on-device. Built custom fine-tuning pipeline and achieved SoTA on accuracy. Some opensourced https://huggingface.co/arun100 }
         \resumeItem{Wave Project: Scalable end-end encrypted Virtual Reality and Video conferencing system. Funded by NSF through a highly competitive process. Launched with 250+ Edu.tech and federal customers during the Covid lockdowns.}
         \resumeItem{Privacy friendly federated learning using Fully-Homomorphic encryption algorithms. Build Android/iOS infrastructure to jointly fine-tune models without a central cloud. Private beta launched with Gov customers.}
-        \resumeItem{Semi-finalist at Dept of Defense Darpa AI Challenge: Picolo Labs was awarded semi-finalist at an AI Challenge for finding software vulnerabilities using Fuzzing and LLMs. Build a competitive solution that can identify CVEs in C/C++ and Java code automatically with a high success rate.}
+        \resumeItem{Semi-finalist at the Darpa AI Challenge: Picolo Labs was awarded semi-finalist at an AI Challenge for finding software vulnerabilities using Fuzzing and LLMs. Build a competitive solution that can identify CVEs in C/C++ and Java code automatically with a high success rate.}
         \resumeItem{Raised seed round from Menlo Ventures, Village Global (Eric Schmidt)}
         \resumeItem{Awarded Research grant by the National Science Foundation (NSF), matched by state government awards.}
       \resumeItemListEnd
@@ -177,26 +177,22 @@ Hands-on engineering leader and full-stack engineer looking for a leadership rol
     \resumeSubheadingOneLine
       {Co-founder, CTO, Incept AI}{2017 - 2019}
       \resumeItemListStart
-        \resumeItem{Chat-based AI assistant on Android to automatically take actions on the user's behalf.}
-        \resumeItem{Engineered a knowledge base for the AI assistant consisting of mobile app screens, action traces and user intents}
+        \resumeItem{Chat-based AI assistant on Android to automatically take actions on the user's behalf. Actions derived from an AI model powered by a Ontological knowledge base over user action traces and intent.}
         \resumeItem{Launched and grew the app to a total of 100K+ users}
       \resumeItemListEnd
 
     \resumeSubheadingOneLine
       {Tech Lead, Senior Software Engineer, Google Inc}{2008-2017}
       \resumeItemListStart
-        \resumeItem{Launched a network stack for peer-peer gaming on iOS and Android via Google Play Games SDK. Designed and implemented the network stack that maintains performance under changing network conditions and NAT topologies. Worked with the CEO of VectorUnit for RipTide
+        \resumeItem{Libjingle/WebRTC on Android: Launched a network stack for peer-peer gaming on iOS and Android via Google Play Games SDK. Designed and implemented the network stack that maintains performance under changing network conditions and NAT topologies. Worked with the CEO of VectorUnit for RipTide
         demo at Google I/O to showcase the platform.}
-        \resumeItem{Launched an API called Google Nearby that can transmit small amount of data securely over near-ultrasound for mobile phones. This can
-        be used to authenticate people in same physical room and securely measure physical distance
-        between phones to under 1 inch accuracy. Responsible for the stack on iOS and Android.Google Nearby grew from inception to 500M daily users.}
-        \resumeItem{Formed a team under Marissa Mayer to build an Android app that can automatically determine if two people are in the same physical room.}
+        \resumeItem{Google Nearby Platform: Launched a realtime system called Google Nearby for auth and data transfer between Android/iOS phones in proximity. Uses multitude of sensors including Near-Ultrasound, Bluetooth and Wifi with an accuracy under 1 inch. Responsible for the stack on iOS and Android. Google Nearby grew from inception to 500M daily users.}
+        \resumeItem{Together Project: Formed a team under Marissa Mayer to build an Android app that can automatically determine if two people are in the same physical room, build applications on top of this layer.}
       \resumeItemListEnd
 
       \resumeItemListStart
-        \resumeItem{Launcehd Wifi-based location services for 3+ Billion users on Android and Chrome from inception. Build Wifi-RF based location clustering algorithms, traffic prediction and business occupancy prediction algorithms.}
-        \resumeItem{Designed and implemented a distributed system to compute user location using Wifi and Cellular base stations. System self-learns from Android users with a GPS fix to push location to indoor-users using statistical and randomized signal propagation algorithms.}
-        \resumeItem{Built cellular remap detection and localization technology, which powers Google's Mobile Maps software (1B+ downloads, most popular app on mobile).}
+        \resumeItem{Wifi-based Location: Launched Wifi-based location services for 3+ Billion users on Android and Chrome from inception. Build Wifi-RF based location clustering algorithms, traffic prediction and business occupancy prediction algorithms. System self-learns using statistical machine learning algorithms and crowdsourced data.}
+        \resumeItem{Cell-based Location: Built cellular remap detection and localization technology, which powers Google's Mobile Maps software (1B+ downloads, most popular app on mobile).}
         \resumeItem{System is now used on Android, WinMo and Blackberry phones. Also works on browsers using HTML 5 Geolocation API, such as on Mozilla's Firefox and Chrome browser, also launched with Google's Toolbar for Microsoft's Internet Explorer.}
         \resumeItem{Algorithms serves over 3 Billion location computations per day on Android and powers Google's mobile Ads business unit. The success of the Wifi project helped grow the team to 70 Engineers (from 3).}
       \resumeItemListEnd
