added commons dir

--- a/applied_ai/arunesh_applied_ai.tex
+++ b/applied_ai/arunesh_applied_ai.tex
@@ -1,5 +1,4 @@
-
-\documentclass[letterpaper,10pt]{article}
+\documentclass[letterpaper,9pt]{article}
 
 \usepackage{latexsym}
 \usepackage[empty]{fullpage}
@@ -150,7 +149,7 @@
 
 %-----------EXPERIENCE-----------
 \section{Summary}
-Applied AI Engineer and Technical Leader with 10+ years of experience building production-grade machine learning systems and 4+ years leading development of agentic AI applications. Expert in LLM orchestration, multi-agent frameworks, RAG pipelines, and tool-augmented reasoning. Proven track record in shipping applied AI features to millions of users, defining technical strategy for autonomous AI systems, and mentoring teams of engineers and scientists to deliver business impact at scale.
+Applied AI Engineer and Technical Leader with 10+ years of experience building production-grade machine learning systems and 4+ years leading development of agentic AI applications. Expert in LLM orchestration, multi-agent frameworks, RAG pipelines, and tool-augmented reasoning. Multiple patents in machine learning on production systems. Proven track record in shipping applied AI features to millions of users, defining technical strategy for autonomous AI systems, and mentoring teams of engineers and scientists to deliver business impact at scale.
 
 \section{Skills}
 \begin{itemize}[leftmargin=3.5em, itemsep=0pt, label=\tiny$\bullet$]
