--- a/common/pubs.tex
+++ b/common/pubs.tex
@@ -1,6 +1,6 @@
 \section{Publications and Patents}
     \begin{itemize}[leftmargin=3.5em, itemsep=0pt, label=\tiny$\bullet$]
-    \resumeItem {Published 40+ papers in top tier Systems and Networking conferences including Best paper awards.
+        \resumeItem {Published 40+ papers in top tier Systems and Networking conferences including Best paper awards.}
     \resumeItem {Awarded 52 patents in the areas of Machine Learning, Distributed Systems, Crowdsourced Learning Algorthms}
     \resumeItem {Holder of multiple patent awards at Google.}
     \end{itemize}
